fix(jupyterlab): @font-face URLs relative to CSS location (work behind hub /user/<name>/ proxy)

--- a/images/terminal/ibm-plex-sans.css
+++ b/images/terminal/ibm-plex-sans.css
@@ -3,26 +3,26 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url('/static/lab/fonts/IBMPlexSans-Regular.woff2') format('woff2');
+  src: url('IBMPlexSans-Regular.woff2') format('woff2');
 }
 @font-face {
   font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src: url('/static/lab/fonts/IBMPlexSans-Bold.woff2') format('woff2');
+  src: url('IBMPlexSans-Bold.woff2') format('woff2');
 }
 @font-face {
   font-family: 'IBM Plex Sans';
   font-style: italic;
   font-weight: 400;
   font-display: block;
-  src: url('/static/lab/fonts/IBMPlexSans-Italic.woff2') format('woff2');
+  src: url('IBMPlexSans-Italic.woff2') format('woff2');
 }
 @font-face {
   font-family: 'IBM Plex Sans';
   font-style: italic;
   font-weight: 700;
   font-display: block;
-  src: url('/static/lab/fonts/IBMPlexSans-BoldItalic.woff2') format('woff2');
+  src: url('IBMPlexSans-BoldItalic.woff2') format('woff2');
 }
